# ripplefarm

./: README.md
backend/: .env.example  .gitignore  README.md  docker-compose-prod.yml  docker-compose.yml
backend/django_app/: .flake8  Dockerfile  entrypoint.sh  mypy.ini  pyproject.toml
backend/django_app/chatbot/: urls.py  utils.py  views.py
backend/django_app/chatbot/agents/: __init__.py  action.py  course.py  main.py  market.py  qa.py
backend/django_app/courses/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
backend/django_app/courses/migrations/: 0001_initial.py  0002_courseuserstatus.py  0003_alter_courseuserstatus_unique_together_and_more.py  0004_alter_courseuserstatus_installation_id_and_more.py  0005_remove_courseuserstatus_installation_id_and_user_cannot_be_null_and_more.py  0006_alter_course_attachment.py  0007_alter_course_attachment.py
backend/django_app/django_app/: celery.py  serializers.py  settings.py  urls.py  views.py
backend/django_app/food_pricing/: admin.py  apps.py  models.py  rwanda-1000.csv  rwanda-2000.csv  rwanda-3000.csv  serializers.py  tasks.py  urls.py  views.py
backend/django_app/food_pricing/migrations/: 0001_initial.py
backend/django_app/nlp/: chatbot.py
backend/django_app/nlp/meme_generator/: main_meme.py
backend/django_app/nlp/meme_generator/meme/: models.py  templates.py
backend/django_app/nlp/meme_generator/utils/: adding_text.py  generate_image.py  generate_text.py
backend/django_app/utils/: files.py  text.py
backend/nginx/: Dockerfile  nginx.conf
mobile/: .editorconfig  .gitignore  .prettierignore  .prettierrc  App.tsx  README.md  app.json  package-lock.json  package.json
mobile/android/: settings.gradle
(+81 files in other folders)
